--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,37 +1,23 @@
-name: Android Build
-
+name: Build Android APK
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
-
 jobs:
   build:
-    name: Build APK
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4  # Update to v4 for consistency
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4  # Update to v4
         with:
-          distribution: 'temurin'
           java-version: '17'
-
-      - name: Download Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Build Debug APK
+          distribution: 'temurin'
+      - uses: android-actions/setup-android@v3  # Update to v3
+      - name: Build APK
         run: ./gradlew assembleDebug
-
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload APK
+        uses: actions/upload-artifact@v4  # Fix: Use v4
         with:
-          name: debug-apk
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
