--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -7,17 +7,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4  # Update to v4 for consistency
+      - uses: actions/checkout@v4
       - name: Set up JDK
-        uses: actions/setup-java@v4  # Update to v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - uses: android-actions/setup-android@v3  # Update to v3
+      - uses: android-actions/setup-android@v3
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
       - name: Build APK
         run: ./gradlew assembleDebug
       - name: Upload APK
-        uses: actions/upload-artifact@v4  # Fix: Use v4
+        uses: actions/upload-artifact@v4
         with:
           name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
